--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/renthelper_home.png" alt="">
+                        <img class="img-fluid" src="img/renthelper_home.png" alt="" style="height: 500px;">
                         <div class="portfolio-btn">
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1"
                                 href="img/staging.renthelper.co.uk_.png" data-lightbox="portfolio"><i
@@ -613,6 +613,11 @@
         </div>
     </div> -->
     <!-- Testimonial End -->
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
 
 
     <!-- Contact Start -->
