Update job titles and experience details in index.html

--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="display-3 mb-3">Jude Clottey</h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Front End Web Developer, Front End Developer, Fullstack Web Developer
+                    <div class="typed-text d-none">Fullstack Web Developer, Front End Developer, Backend Web Developer
                     </div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://drive.google.com/uc?export=download&id=1pRMj4OS9WrJqTxfhLjGL4ghfqxTyhGzB" class="btn btn-primary py-3 px-4 me-5" >Download CV</a>
+                        <a href="https://drive.google.com/uc?export=download&id=1pRMj4OS9WrJqTxfhLjGL4ghfqxTyhGzB"
+                            class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <!-- <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
@@ -132,7 +133,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="d-flex align-items-center mb-5">
                         <div class="years flex-shrink-0 text-center me-4">
-                            <h1 class="display-1 mb-0">4</h1>
+                            <h1 class="display-1 mb-0">5</h1>
                             <h5 class="mb-0">Years</h5>
                         </div>
                         <h3 class="lh-base mb-0">of working experience as a software developer</h3>
@@ -302,22 +303,34 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
+                                    <h5>Fullstack Developer (Hybrid)</h5>
+                                    <hr class="text-primary my-2">
+                                    <p class="text-primary mb-1">2023 - present </p>
+                                    <h6 class="mb-0">ePareto Information Systems</h6>
+                                    <p class="text-black mb-1">(Accra, Ghana) </p>
+
+                                </div>
+                                <div class="col-sm-6">
                                     <h5>Frontend Developer (Remote)</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2022 - present </p>
+                                    <p class="text-primary mb-1">2022 - 2024 </p>
                                     <h6 class="mb-0">Best Adapted Company Limited</h6>
+                                    <p class="text-black mb-1">(Farnborough, England) </p>
+
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Software Developer</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2019 - 2023</p>
                                     <h6 class="mb-0">GI-KACE</h6>
+                                    <p class="text-black mb-1">(Accra, Ghana) </p>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Frontend Developer (Remote)</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2021 - present</p>
                                     <h6 class="mb-0">ZroVerse Inc</h6>
+                                    <p class="text-black mb-1">(Durham, United States) </p>
                                 </div>
 
                             </div>
@@ -613,11 +626,11 @@
         </div>
     </div> -->
     <!-- Testimonial End -->
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
 
     <!-- Contact Start -->
